--- a/base-fe-home/package.json
+++ b/base-fe-home/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "^19.1.6",
     "antd": "^5.26.2",
     "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-bootstrap": "^1.1.0"
   }
 }
