--- a/base-fe-home/package.json
+++ b/base-fe-home/package.json
@@ -16,6 +16,9 @@
     "antd": "^5.26.2",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "i": "^0.3.7",
+    "lucide-react": "^0.525.0",
+    "npm": "^11.4.2",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
