--- a/base-fe-react/.env
+++ b/base-fe-react/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:3000
-REACT_APP_TITLE=Trang người dùng
+VITE_API_URL=http://localhost:3000
+VITE_TITLE=Trang người dùng
 PORT=4000
